Stop the charts expand nav from going behind filters

--- a/app/stylesheets/layout.scss
+++ b/app/stylesheets/layout.scss
@@ -37,15 +37,20 @@ body {
   }
 
   .charts-container {
+    $trans: 250ms ease;
+    background-clip: content-box;  // don't extend background into spacer border
+    border-top: 0 solid transparent;  // create a space behind filters
     bottom: 0;
+    box-sizing: border-box;
     height: $charts-above-height;
     left: 0;
     position: absolute;
     right: 0;
-    transition: height 200ms ease;
+    transition: height $trans, border-top $trans;  // open the spacer behind filters
     z-index: 2;
 
     &.open {
+      border-top-width: $filters-closed-height;  // spacer behind filters
       height: 100%;
     }
   }
